# SpaceY

./: CMakeLists.txt  README
include/: input.h  main.h
src/: input.c  main.c
